fixed alignment

--- a/VideoProject/styles.css
+++ b/VideoProject/styles.css
@@ -9,9 +9,10 @@ video{
 
 h1{
     z-index: 10;
+    color: white;
     position: absolute;
     top: 25%;
-    color: white;
     left: 25%;
+    transform: translate(25%, 25%);
     font-size: 100px;
 }
